# geospatial_processing_project

./: 2090.rlrdata.txt  2095.rlrdata.txt  2098.rlrdata.txt  2142.rlrdata.txt  README.md  pyproject.toml  requirements.txt
data/: metadata_stations.csv  stations  stations.xlsx
data/stations/: 154.rlrdata.txt  2075.rlrdata.txt
notebook/: example_usage.ipynb
sltk/: __init__.py  analysis.py  compare.py  distances.py  geometry.py  loader.ipynb  loader.py  loader_metadata.py
tests/: test_analysis.py  test_compare.py  test_distances.py  test_geometry.py  test_loader.py
